--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container d-flex justify-content-between">
 
       <div class="logo">
-        <h1><a href="index.html"><span>Kunal </span>IT Services</a></h1>
+        <h1><a href="index.html"><span>Kapalin </span>Technologies</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -54,24 +54,6 @@
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -93,7 +75,7 @@
             <div class="carousel-container">
               <div class="container">
                 <h2 class="animate__animated animate__fadeInDown">The Best Business Information </h2>
-                <p class="animate__animated animate__fadeInUp">We're In The Business Of Helping You Start Your Business</p>
+                <p class="animate__animated animate__fadeInUp">Don’t find customers for your products, find products for your customers.</p>
                 <a href="#about" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
               </div>
             </div>
@@ -102,8 +84,8 @@
           <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/2.jpg)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">At vero eos et accusamus</h2>
-                <p class="animate__animated animate__fadeInUp">Helping Business Security & Peace of Mind for Your Family</p>
+                <h2 class="animate__animated animate__fadeInDown">ENTREPRENEUR MIND</h2>
+                <p class="animate__animated animate__fadeInUp">The true ENTREPRENEUR is a risk taker, not an excuse maker.</p>
                 <a href="#about" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
               </div>
             </div>
@@ -112,8 +94,8 @@
           <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/3.jpg)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">Temporibus autem quibusdam</h2>
-                <p class="animate__animated animate__fadeInUp">Beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem</p>
+                <h2 class="animate__animated animate__fadeInDown">OUR AIM</h2>
+                <p class="animate__animated animate__fadeInUp">We don't just build websites, we build websites that SELLS</p>
                 <a href="#about" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
               </div>
             </div>
@@ -141,7 +123,7 @@
         <div class="row">
           <div class="col-md-12 col-sm-12 col-xs-12">
             <div class="section-headline text-center">
-              <h2>About eBusiness</h2>
+              <h2>About Kapalin Technologies</h2>
             </div>
           </div>
         </div>
@@ -151,38 +133,19 @@
             <div class="well-left">
               <div class="single-well">
                 <a href="#">
-                  <img src="assets/img/about/1.jpg" alt="">
+                  <img  src="assets/img/about/3.jpg" alt="">
                 </a>
               </div>
             </div>
           </div>
           <!-- single-well end-->
-          <div class="col-md-6 col-sm-6 col-xs-12">
+          <div class="col-md-6 col-sm-6 col-xs-12 p-5">
             <div class="well-middle">
               <div class="single-well">
-                <a href="#">
-                  <h4 class="sec-head">project Maintenance</h4>
-                </a>
-                <p>
-                  Redug Lagre dolor sit amet, consectetur adipisicing elit. Itaque quas officiis iure aspernatur sit adipisci quaerat unde at nequeRedug Lagre dolor sit amet, consectetur adipisicing elit. Itaque quas officiis iure
+                  <h4 class="sec-head">Seamless collaboration, total transparency, secure delivery. We’ve developed a better approach to custom software development.</h4>
+                <p style="font-size: 1rem;">
+                  The success of an idea depends on the team. We have geniuses dedicated teams that are passionate about what they do and will provide your project with a full cycle web/mobile development outsourcing services.  
                 </p>
-                <ul>
-                  <li>
-                    <i class="bi bi-check"></i> Interior design Package
-                  </li>
-                  <li>
-                    <i class="bi bi-check"></i> Building House
-                  </li>
-                  <li>
-                    <i class="bi bi-check"></i> Reparing of Residentail Roof
-                  </li>
-                  <li>
-                    <i class="bi bi-check"></i> Renovaion of Commercial Office
-                  </li>
-                  <li>
-                    <i class="bi bi-check"></i> Make Quality Products
-                  </li>
-                </ul>
               </div>
             </div>
           </div>
