--- a/index.html
+++ b/index.html
@@ -210,9 +210,8 @@
                   <a class="services-icon" href="#">
                     <i class="bi bi-briefcase"></i>
                   </a>
-                  <h4>Expert Coder</h4>
-                  <p>
-                    will have to make sure the prototype looks finished by inserting text or photo.make sure the prototype looks finished by.
+                  <h4>Website Development</h4>
+                  <p>All kinds of static and dynamic websites are developed by us. Our websites has amazing front-end to attract more costumers and strong backend to give you seamless experience.
                   </p>
                 </div>
               </div>
@@ -226,9 +225,8 @@
                   <a class="services-icon" href="#">
                     <i class="bi bi-card-checklist"></i>
                   </a>
-                  <h4>Creative Designer</h4>
-                  <p>
-                    will have to make sure the prototype looks finished by inserting text or photo.make sure the prototype looks finished by.
+                  <h4>UI / UX Designing</h4>
+                  <p> We design masterpiece User Interface and provide best User Experience. 
                   </p>
                 </div>
               </div>
@@ -243,9 +241,9 @@
                   <a class="services-icon" href="#">
                     <i class="bi bi-bar-chart"></i>
                   </a>
-                  <h4>Wordpress Developer</h4>
+                  <h4>Social Media Marketing</h4>
                   <p>
-                    will have to make sure the prototype looks finished by inserting text or photo.make sure the prototype looks finished by.
+                    Our will also handle your social media to reach you more customers and grow you bussiness on all social platforms.
                   </p>
                 </div>
               </div>
@@ -260,9 +258,9 @@
                   <a class="services-icon" href="#">
                     <i class="bi bi-binoculars"></i>
                   </a>
-                  <h4>Social Marketer </h4>
+                  <h4>Banner/Poster Design</h4>
                   <p>
-                    will have to make sure the prototype looks finished by inserting text or photo.make sure the prototype looks finished by.
+                    Want to regular post some good looking content on you desired platforms? Kapalin Technologies is there to do that for you.
                   </p>
                 </div>
               </div>
@@ -280,7 +278,7 @@
                   </a>
                   <h4>Seo Expart</h4>
                   <p>
-                    will have to make sure the prototype looks finished by inserting text or photo.make sure the prototype looks finished by.
+                    We will make sure that your website appears on top of search engines and you customers will be able to find you easily.
                   </p>
                 </div>
               </div>
@@ -298,7 +296,7 @@
                   </a>
                   <h4>24/7 Support</h4>
                   <p>
-                    will have to make sure the prototype looks finished by inserting text or photo.make sure the prototype looks finished by.
+                    Our team will assist you 24 x 7 support and according to your convenience to solve your issue ASAP.  
                   </p>
                 </div>
               </div>
@@ -329,17 +327,17 @@
                 <div class="team-social-icon text-center">
                   <ul>
                     <li>
-                      <a href="#">
-                        <i class="bi bi-facebook"></i>
+                      <a href="https://www.linkedin.com/in/dibyanshu-singh-4bbb70182/">
+                        <i class="bi bi-linkedin"></i>
                       </a>
                     </li>
                     <li>
-                      <a href="#">
-                        <i class="bi bi-twitter"></i>
+                      <a href="mailto:dibyanshusnghds@gmail.com?subject=Contacting From Kapalin Technologies">
+                        <i class="bi bi-envelope-fill"></i>
                       </a>
                     </li>
                     <li>
-                      <a href="#">
+                      <a href="instagram.com/dibyanshu04">
                         <i class="bi bi-instagram"></i>
                       </a>
                     </li>
@@ -347,8 +345,8 @@
                 </div>
               </div>
               <div class="team-content text-center">
-                <h4>Kunal Tanwar</h4>
-                <p>Founder</p>
+                <h4>Dibyanshu</h4>
+                <p>Developer</p>
               </div>
             </div>
           </div>
