--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
-  
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700|Raleway:300,400,400i,500,500i,700,800,900" rel="stylesheet">
@@ -40,7 +39,6 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex justify-content-between">
-
       <div class="logo">
         <h1><a href="index.html"><span>Kapalin </span>Technologies</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
@@ -76,7 +74,7 @@
               <div class="container">
                 <h2 class="animate__animated animate__fadeInDown">The Best Business Information </h2>
                 <p class="animate__animated animate__fadeInUp">Don’t find customers for your products, find products for your customers.</p>
-                <a href="#about" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
+                <a href="#contact" class="btn-get-started scrollto animate__animated animate__fadeInUp">Contact Us</a>
               </div>
             </div>
           </div>
@@ -86,7 +84,7 @@
               <div class="container">
                 <h2 class="animate__animated animate__fadeInDown">ENTREPRENEUR MIND</h2>
                 <p class="animate__animated animate__fadeInUp">The true ENTREPRENEUR is a risk taker, not an excuse maker.</p>
-                <a href="#about" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
+                <a href="#contact" class="btn-get-started scrollto animate__animated animate__fadeInUp">Contact Us</a>
               </div>
             </div>
           </div>
@@ -96,7 +94,7 @@
               <div class="container">
                 <h2 class="animate__animated animate__fadeInDown">OUR AIM</h2>
                 <p class="animate__animated animate__fadeInUp">We don't just build websites, we build websites that SELLS</p>
-                <a href="#about" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
+                <a href="#contact" class="btn-get-started scrollto animate__animated animate__fadeInUp">Contact Us</a>
               </div>
             </div>
           </div>
@@ -980,7 +978,7 @@
           <div class="col-md-12 col-sm-12 col-xs-12">
             <div class="copyright text-center">
               <p>
-                &copy; Copyright <strong>eBusiness</strong>. All Rights Reserved
+                &copy; Copyright <strong>Kapalin Technologies</strong>. All Rights Reserved
               </p>
             </div>
             <div class="credits">
@@ -990,7 +988,7 @@
               Licensing information: https://bootstrapmade.com/license/
               Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=eBusiness
             -->
-              Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+              Designed by <a href="https://bootstrapmade.com/">Kapalin Technologies</a>
             </div>
           </div>
         </div>
